--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 #s1{
-    position: absolute;
+    position: relative;
     z-index: 1;
     width: 100%;   
     background-color: #ffffff;
@@ -90,7 +90,7 @@
     height: 10%;
     width: 16%;
     border-radius: 50px;
-    border-width: 0;
+    border-width: 0px;
     background-color: #ff77bc;
     margin-top: 15px;
     margin-bottom: 15px;
@@ -101,7 +101,7 @@
     width: 17%;
 }
 #d0{
-    position: relative;
+    position: absolute;
     top: 20px;
     background: none;
     border-width: 30px;
